//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refreshToken String
  accessToken String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  oauth_token_secret String
  oauth_token String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table User {
  id String [pk]
  firstName String
  lastName String
  email String [unique, not null]
  phone String
  password String [not null]
  emailVerified DateTime
  passedSurvey Boolean [not null, default: false]
  consent Boolean [not null, default: false]
  role Role [not null, default: 'USER']
  accounts Account [not null]
  sessions Session [not null]
  responses Response [not null]
  schools Json [not null, default: '{}']
}

Table Response {
  id String [pk]
  User User [not null]
  userId String [not null]
  Option Option [not null]
  optionId String [not null]
}

Table SurveyQuestion {
  id Int [pk, increment]
  prompt String [not null]
  options Option [not null]

  indexes {
    (id, prompt) [unique]
  }
}

Table Option {
  id String [pk]
  text String [not null]
  score Philosophy [not null]
  questionId Int [not null]
  question SurveyQuestion [not null]
  Response Response [not null]
}

Enum Role {
  ADMIN
  USER
}

Enum Philosophy {
  CARE_ETHICS
  DEONTOLOGY
  UTILITARIANISM
  VIRTUE_ETHICS
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Response.userId > User.id [delete: Cascade]

Ref: Response.optionId > Option.id

Ref: Option.questionId > SurveyQuestion.id